# betanet-tools

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bounty.md
crates/: README.md
crates/bn-lint/: Cargo.toml  README.md
crates/bn-lint/src/: lib.rs  main.rs
crates/bn-lint/src/rules/: control_stream.rs
crates/bn-lint/tests/fixtures/control_stream/: negative1.hex
crates/bo-aead/: Cargo.toml  README.md
crates/bo-aead/src/: lib.rs
crates/bo-core/: Cargo.toml  README.md
crates/bo-core/src/: lib.rs
crates/bo-htx/: Cargo.toml  README.md
crates/bo-htx/src/: lib.rs
crates/bo-tls/: Cargo.toml  README.md
crates/bo-tls/src/: lib.rs
crates/htx-lab/: Cargo.toml  README.md
crates/htx-lab/fixtures/: README.md
crates/htx-lab/src/: control_stream_examples.rs  lib.rs  mixnet_sim.rs  tunnel_mock.rs
crates/htx-lab/tests/: smoke.rs
crates/sbom/: Cargo.toml  README.md
crates/sbom/src/: lib.rs
crates/utls-template/chrome-probe/: Cargo.toml  README.md
crates/utls-template/chrome-probe/src/: lib.rs
crates/utls-template/cli/: Cargo.toml
crates/utls-template/cli/src/: main.rs
crates/utls-template/hello-snapshot/: Cargo.toml  README.md
crates/utls-template/hello-snapshot/src/: h2_h3_capture.rs  import_pcap.rs  ja3.rs  ja4.rs  lib.rs  pcap_importer.rs  quic.rs  quic_decrypt.rs  tls_capture.rs
crates/utls-template/hello-template/: Cargo.toml  README.md
crates/utls-template/hello-template/src/: export_utls.rs  grease.rs  lib.rs  tls_record.rs
docs/: index.md  l1-htx.md  l4-mixnet.md
docs/management/: BOUNTY.en.md  BOUNTY.md  CLA.en.md  CLA.md  README.md
docs/specs/: README.md  bn-lint.md  control-stream.cbor.schema  control-stream.md  utls-template.md
docs/templates/: example_sanitize_test.sh  pcap_sanitizer.sh
