[package]
name = "utls-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
hello-template = { path = "../hello-template" }
hello-snapshot = { path = "../hello-snapshot" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2", features = ["derive"] }
pcap = "0.10"
