[package]
name = "hello-snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "0.10" # Versión a verificar, usar la más reciente compatible
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"

# QUIC initial decryption
hkdf = "0.12"
aes-gcm = "0.10"
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"
