[package]
name = "hello-snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]
hello-template = { path = "../hello-template" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pcap-parser = "0.15.0"
pnet_packet = "0.34.0"
md-5 = "0.7.0"

# QUIC initial decryption
hkdf = "0.12"
aes-gcm = "0.10"
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"
